Fix T75094: Gpencil Selection mode crash in Vertex Paint when build modifier is used